<resources>
    <string name="app_name">Revalorando</string>
    <string name="nick_usuario">Ingrese el nombre de usuario</string>
    <string name="password_usuario">Ingrese la contraseña</string>
    <string name="password2_usuario">Confirme la contraseña</string>
    <string name="nombre_usuario">Ingrese el nombre</string>
    <string name="apellido_usuario">Ingrese el apellido</string>
    <string name="email_usuario">Ingrese el email</string>
    <string name="telefono_usuario">Ingrese el telefono</string>
    <string name="direccion_usuario">Ingrese dirección</string>
    <string name="numero_usuario">Ingrese el número de puerta</string>
    <string name="localidad_usuario">Ingrese la localidad</string>
    <string name="departamento_usuario">Ingrese el departamento</string>

    <string name="nombre_articulo">Ingrese el nombre del artículo</string>
    <string name="descripcion_articulo">Ingrese la descripción</string>
    <string name="imagen_articulo">Ingrese url</string>

    <string name="eliminado_articulo">Se ha eliminado el artículo</string>
    <string name="no_eliminado_articulo">No se ha eliminado el artículo</string>

    <string name="add_usuario">Registrar nuevo usuario</string>
    <string name="guardar">Guardar</string>
    <string name="registrarse">Registrarse</string>
    <string name="no_guardado">No se ha podido eliminar</string>
    <string name="no_registrado">No se ha podido eliminar</string>

    <string name="login">Iniciar sesión</string>
    <string name="add_articulo">Agregar un artículo</string>
    <string name="app_subtitle">Tu mejor oportunidad</string>
    <string name="home">Volver</string>
    <string name="about">Acerca de</string>
    <string name="logout">Salir</string>
    <string name="titulo_borrar">Eliminar artículo</string>
    <string name="msg_borrar">Desea eliminar?</string>
    <string name="titulo_acerca_de">Acerca de</string>
    <string name="msg_acerca_de">Copyright BITteam</string>
    <string name="si">SI</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="navigation_drawer_open">Ver</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_trueque">Mis trueques</string>
    <string name="menu_articulo">Mis artículos</string>
    <string name="menu_otros">Otros</string>
    <string name="menu_usuario" />
    <string name="menu_oferta">Ofertas recibidas</string>

    <string-array name="departamentos_array">
        <item>Artigas</item>
        <item>Canelones</item>
        <item>Cerro largo</item>
        <item>Colonia</item>
        <item>Durazno</item>
        <item>Flores</item>
        <item>Florida</item>
        <item>Lavalleja</item>
        <item>Maldonado</item>
        <item>Montevideo</item>
        <item>Paysandu</item>
        <item>Río negro</item>
        <item>Rivera</item>
        <item>Rocha</item>
        <item>Salto</item>
        <item>San jose</item>
        <item>Soriano</item>
        <item>Tacuarembo</item>
        <item>Treinta y tres</item>
    </string-array>

    <string-array name="categoria_array">
        <item>Tecnología</item>
        <item>Accesorios para Vehículos</item>
        <item>Salud y Equipamiento Médico</item>
        <item>Belleza y Cuidado Personal</item>
        <item>Deportes y Fitness</item>
        <item>Hogar y Muebles</item>
        <item>Electrodomésticos</item>
        <item>Herramientas</item>
        <item>Construcción</item>
        <item>Industrias y Oficinas</item>
        <item>Moda</item>
        <item>Juguetes</item>
        <item>Bebés</item>
        <item>Vehículos</item>
        <item>Inmuebles</item>
        <item>Productos Sustentadas</item>
    </string-array>

    <string-array name="condicion_array">
        <item>Usado</item>
        <item>Nuevo</item>
    </string-array>


</resources>