<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>


    <TextView
        android:id="@+id/etiquetaNuevoArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorverde"
        android:text="NUEVO ARTÍCULO"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="18sp" />




    <EditText
        android:id="@+id/textViewIngresarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/nombre_articulo"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        />

    <EditText
        android:id="@+id/textViewIngresarDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_articulo"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/textViewIngresarImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imagen_articulo"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/etiquetaCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seleccione la categoría:"
        android:textIsSelectable="false"
        android:textSize="18sp"        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        />
    <Spinner
        android:id="@+id/spinnerIngresarCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="Seleccione categoría"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/etiquetaCondicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seleccione la condición:"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        />
    <Spinner
        android:id="@+id/spinnerIngresarCondicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="Seleccione condición"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorverde"
        android:textColor="#FFFFFF"
        android:text="@string/guardar"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>